# Enterprise-RAG-Chatbot-with-Role-Base-Access-Control-

./: .env.example  .gitignore  LICENSE  README.md  back.bat  front.bat  project_analysis.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py  ui.py
app/api/: __init__.py  admin.py  auth.py  chat.py  documents.py  evaluate.py  health.py
app/core/: __init__.py  config.py  database.py  security.py  users.py
app/rag/: __init__.py  chain.py  classifier.py  config.py  csv_query.py  module.py  processors.py
app/rag_evaluator/: __init__.py  eval_dataset.py  eval_report.py  evaluation_results_ragas_quick.csv  last_eval_status.json  qa_pairs_openai.csv  ragas_evaluator.py  ragas_report.html  rbac_security_eval.py  rbac_security_report.json
app/rag_utils/: __init__.py  csv_query.py  document_processors.py  query_classifier.py  rag_chain.py  rag_module.py  secret_key.py
app/ui/: __init__.py  constants.py  helpers.py  styles.py
app/ui/pages/: __init__.py  admin.py  chat.py  kb_indexing.py  login.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.ts  client.ts
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  EvaluationPage.tsx  ExplorerPage.tsx  KbIndexingPage.tsx  LoginPage.tsx  UploadPage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
scratch/: patch_ui.py  patch_ui_chat_and_sidebar.py  patch_ui_login_colors.py  rebuild_prod_db.py  reset_and_reindex.py  test_query_api.py
tests/: conftest.py  test_chatbot.py  test_ragas_eval.py  test_ui.py
(+2 files in other folders)
