[project]
name = "ds-rpc-01"
version = "0.1.0"
description = "Starter project for the RPC-01: Internal Chatbot with Role Based Access Control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.39.0,<2.0.0",
    "fastapi[standard]>=0.129.0,<1.0.0",
    "google-genai>=1.64.0,<2.0.0",
    "langchain-google-genai>=2.1.3,<3.0.0",
    "langchain>=0.3.28,<0.4.0",
    "chromadb>=0.5.23,<0.6.0",
    "bcrypt>=4.3.0,<5.0.0",
    "pandas>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.34.2,<3.0.0",
    "cohere>=5.21.1,<6.0.0",
    "langchain-cohere>=0.3.5,<0.4.0",
    "duckdb>=1.3.2,<2.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "pydantic>=2.9.2,<3.0.0",
    "langchain-chroma>=0.1.4,<0.2.0",
    "PyJWT>=2.11.0,<3.0.0",
    "pdfplumber>=0.11.9,<0.12.0",
    "ragas>=0.4.3,<0.5.0",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "playwright>=1.49.0,<2.0.0",
    "pytest-playwright>=0.5.0,<1.0.0",
]


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (require live vectorstore + API key). Deselect with -m 'not slow'",
]
